--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="light dark" />
     <title>Закрывающий тег</title>
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon.png">
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
@@ -40,7 +44,12 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main class="page">
+      <svg viewBox="0 0 39 39">
+        <use href="./svg/floppy.svg#floppy">
+      </svg>
+    </main>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
+
