--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
+    <link rel="stylesheet" href="./styles/light.css" />
+    <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="stylesheet" href="./styles/themes.css" />
@@ -45,11 +47,10 @@
       </nav>
     </header>
     <main class="page">
-      <svg viewBox="0 0 39 39">
-        <use href="./svg/floppy.svg#floppy">
-      </svg>
+      <h1>HTML</h1>
     </main>
     <script src="./scripts/like.js"></script>
+    <script src="./scripts/set-theme.js"></script>
   </body>
 </html>
 
